--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -106,6 +106,9 @@
     <string name="action_sections">Secciones</string>
     <string name="action_products">Productos</string>
     <string name="menu_options">Opciones</string>
+    <string name="tvDescription">Descripción</string>
+    <string name="tvInfo">Información</string>
+    <string name="tvMap">Map</string>
 
 
 </resources>
